5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4422/executions/1575_994.log
== TEST (2019-03-20 17:55:22) 
-- CODE:
ufam = Universidade Federal do Amazonas
print("ufam")

-- ERROR:
File "XXXX", line 1
    ufam = Universidade Federal do Amazonas
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 17:56:36) 
-- CODE:
 ufam = universidade
print("ufam")
-- ERROR:
File "XXXX", line 1
    ufam = universidade
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 17:56:47) 
-- CODE:
 ufam = universidade
print("ufam", ufam)
-- ERROR:
File "XXXX", line 1
    ufam = universidade
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 17:58:55) 
-- CODE:
print ("Universidade Federal do Amazonas")
-- OUTPUT:
Universidade Federal do Amazonas
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 18:01:31) 
-- CODE:
print ("Universidade Federal do Amazonas")
-- EXECUTION TIME:
0.124278
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
Universidade Federal do Amazonas
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
